testing the issue resolution for home page on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,9 @@
 .read-the-docs {
   color: #888;
 }
+body.home-lock {
+    height: 100%;
+    overflow: hidden;
+    overscroll-behavior: none;
+    touch-action: none;
+}
